src/test/ui/parser/pat-lt-bracket-2.stderr
error: expected one of `>`, a const expression, lifetime, or type, found `)`
  --> $DIR/pat-lt-bracket-2.rs:1:8
   |
LL | fn a(B<) {}
   |        ^ expected one of `>`, a const expression, lifetime, or type

error: aborting due to previous error

