src/test/ui/parser/pat-lt-bracket-2.rs
fn a(B<) {}
   //~^ ERROR expected one of `>`, a const expression, lifetime, or type, found `)`

fn main() {}
